--- a/classes/PathFormMdtUtil.cls
+++ b/classes/PathFormMdtUtil.cls
@@ -1,15 +1,30 @@
+/**
+ * @description       : 
+ * @author            : Antonio Pardo Corral
+ * @group             : 
+ * @last modified on  : 06-07-2022
+ * @last modified by  : Rafael Vargas Pinilla
+**/
 public without sharing class PathFormMdtUtil {
     
 	private String recordId;
 	private String stepField;
-	private String process;
+	private String rtName;
+	private String formName;
 	private String sobjType;
 	private Map<String, Set<String>> map_sobj_availabeflds;
 
-	public PathFormMdtUtil(String recordId, String stepField, String process, String sobjType){
+	public PathFormMdtUtil(String recordId, String stepField, String rtName, String sobjType){
 		this.recordId = recordId;
 		this.stepField = stepField;
-		this.process = process;
+		this.rtName = rtName;
+		this.sobjType = sobjType;
+		this.map_sobj_availabeflds = new Map<String, Set<String>>();
+	}
+
+	public PathFormMdtUtil(String recordId, String formName, String sobjType){
+		this.recordId = recordId;
+		this.formName = formName;
 		this.sobjType = sobjType;
 		this.map_sobj_availabeflds = new Map<String, Set<String>>();
 	}
@@ -24,37 +39,65 @@ public without sharing class PathFormMdtUtil {
 		Set<String> setFormConfigId = new Set<String>();
 		Map<String, SObject> map_sobjects;
 		List<Object> lstConditionsBloq;
+		List<Object> lstConditionsViewOnly;
 
-		map_sobjects = formBasedOnPath.getMapParamsForm(this.process, this.recordId);
-		Set<String> setKeyObjects = map_sobjects.keySet();
-		System.debug('setKeyObjects ' + setKeyObjects);
-		for(DynamicPathConfig__mdt configs : [SELECT DeveloperName, JSONBlockingConditions__c, (SELECT Id, JSONFieldConfig__c,Label FROM FormConfigs__r) FROM DynamicPathConfig__mdt WHERE DeveloperName = :this.process AND SObjectType__c = :this.sobjType LIMIT 1]){
-			if(configs.JSONBlockingConditions__c != null)lstConditionsBloq = (List<Object>)JSON.deserializeUntyped(configs.JSONBlockingConditions__c);
-			filterConditions(setKeyObjects, lstConditionsBloq);
-			for(FormConfig__mdt formconfig : configs.FormConfigs__r){
-				system.debug('>>>>>>> for getConfigForm '+ formconfig);
-				List<Object> lstSobjAux = (List<Object>)JSON.deserializeUntyped(formconfig.JSONFieldConfig__c);
+		if(String.isNotBlank(this.formName)){
+
+			map_sobjects = formBasedOnPath.getMapParamsSingleForm(this.formName, this.recordId);
+			Set<String> setKeyObjects = map_sobjects.keySet();
+			List<FormConfig__mdt> lstSingleForm = [SELECT Id, JSONFieldConfig__c,Label FROM FormConfig__mdt WHERE DeveloperName =: this.formName];
+
+				system.debug('>>>>>>> for getConfigSingleForm '+ lstSingleForm[0]);
+				List<Object> lstSobjAux = (List<Object>)JSON.deserializeUntyped(lstSingleForm[0].JSONFieldConfig__c);
 				filterForm(setKeyObjects, lstSobjAux);
 				getQueryMapConfig(lstSobjAux,map_obj_flds);
-				map_form.put(formconfig.Label, lstSobjAux);
-				setFormConfigId.add(formconfig.Id);
-			}
-		}	
+				map_form.put(lstSingleForm[0].Label, lstSobjAux);
+				setFormConfigId.add(lstSingleForm[0].Id);
 
+				map_ret.put('step',lstSingleForm[0].Label);
+		}else{
+			map_sobjects = formBasedOnPath.getMapParamsForm(this.rtName, this.recordId);
+			if(map_sobjects != null){
+				Set<String> setKeyObjects = map_sobjects.keySet();
+				System.debug('setKeyObjects ' + setKeyObjects);
+				for(DynamicPathConfig__mdt configs : [SELECT DeveloperName, JSONBlockingConditions__c,JSON_ViewOnlyConfig__c,  (SELECT Id, JSONFieldConfig__c,Label FROM FormConfigs__r) FROM DynamicPathConfig__mdt WHERE RecordType__c = :this.rtName AND SObjectType__c = :this.sobjType LIMIT 1]){
+					if(configs.JSONBlockingConditions__c != null){
+						lstConditionsBloq = (List<Object>)JSON.deserializeUntyped(configs.JSONBlockingConditions__c);
+						filterConditions(setKeyObjects, lstConditionsBloq);
+
+					}
+					if(configs.JSON_ViewOnlyConfig__c != null){
+						lstConditionsViewOnly = (List<Object>)JSON.deserializeUntyped(configs.JSON_ViewOnlyConfig__c);
+						filterConditions(setKeyObjects, lstConditionsViewOnly);
+					}
+
+					for(FormConfig__mdt formconfig : configs.FormConfigs__r){
+						system.debug('>>>>>>> for getConfigForm '+ formconfig);
+						List<Object> lstSobjAux = (List<Object>)JSON.deserializeUntyped(formconfig.JSONFieldConfig__c);
+						filterForm(setKeyObjects, lstSobjAux);
+						getQueryMapConfig(lstSobjAux,map_obj_flds);
+						map_form.put(formconfig.Label, lstSobjAux);
+						setFormConfigId.add(formconfig.Id);
+					}
+				}
+
+				map_ret.put('step', (String)map_sobjects.get(sobjType).get(this.stepField));
+				map_ret.put('stepOrder', getPathSteps(this.stepField, this.sobjType));
+			}
+		}
 
 		for(HiddeRules__mdt hiddentRules : [SELECT Id, FormConfig__r.Label, JSONHiddeRule__c from HiddeRules__mdt WHERE FormConfig__c IN :setFormConfigId]){
 			map_hiddenrules.put(hiddentRules.FormConfig__r.Label, JSON.deserializeUntyped(hiddentRules.JSONHiddeRule__c));
 		}
 		
-		//map_sobjects = processQueryMap(this.recordId, this.sobjType, map_obj_flds, map_rel_sobj);
+		//map_sobjects = rtNameQueryMap(this.recordId, this.sobjType, map_obj_flds, map_rel_sobj);
 		
 		System.debug('map_sobjects ' + map_sobjects);
 		if(map_sobjects!=null && !map_sobjects.isEmpty())fuseSobjInfoIntoConfig(map_sobjects, map_form, map_rel_sobj);
 		map_ret.put('form', map_form);
 		map_ret.put('map_sobjects', map_sobjects);
-		map_ret.put('lstConditionsBloq', lstConditionsBloq);
-		map_ret.put('step', (String)map_sobjects.get(sobjType).get(this.stepField));
-		map_ret.put('stepOrder', getPathSteps(this.stepField, this.sobjType));
+		if(lstConditionsBloq != null)map_ret.put('lstConditionsBloq', lstConditionsBloq);
+		if(lstConditionsViewOnly != null)map_ret.put('lstConditionsViewOnly', lstConditionsViewOnly);
 		map_ret.put('mainSobjType', sobjType);
 		map_ret.put('hiddenRules', map_hiddenrules);
 		return map_ret;
@@ -82,7 +125,7 @@ public without sharing class PathFormMdtUtil {
 		String cond =  '';
 		Boolean delElement = true;
 		for (Integer i = (lstSobjAux.size()-1) ; i>= 0 ; i--){
-			
+			delElement = true;
 			map_finfo = (Map<String, Object>)lstSobjAux[i];
 			System.debug(' sobjjjjjjjj' +  map_finfo.get('condition'));
 			for(String sobjName : setKeyObjects){
@@ -93,20 +136,22 @@ public without sharing class PathFormMdtUtil {
 					break;
 				}
 			}
+			
 			if(delElement){
 				System.debug('delete condition ' + map_finfo.get('condition'));
 				lstSobjAux.remove(i);
 				delElement = false;
 			}
 
-		} 
+		}
+
 
 	}
 
-	public static Object getConfigForm(String process){
+	public static Object getConfigForm(String rtName){
 		system.debug('>>>>>>>>>>>>>>>> getConfigForm');
 		Map<String, List<Object>> map_form = new Map<String, List<Object>>();
-		for(FormConfig__mdt configs : [SELECT JSONFieldConfig__c,DeveloperName FROM FormConfig__mdt WHERE DeveloperName= :process LIMIT 1]){
+		for(FormConfig__mdt configs : [SELECT JSONFieldConfig__c,DeveloperName FROM FormConfig__mdt WHERE DeveloperName= :rtName LIMIT 1]){
 			map_form.put(configs.DeveloperName, (List<Object>)JSON.deserializeUntyped(configs.JSONFieldConfig__c));
 		}	
 
@@ -133,12 +178,12 @@ public without sharing class PathFormMdtUtil {
 		}
 		
 	}
-	public Map<String, List<SObject>> processQueryMap(String recordId, String mainObj, Map<String, Set<String>> map_obj_flds, Map<String, String> map_rel_sobj){
-		system.debug('>>>>>>>>>>>>>>>> processQueryMap '+ mainObj);
+	/*public Map<String, List<SObject>> rtNameQueryMap(String recordId, String mainObj, Map<String, Set<String>> map_obj_flds, Map<String, String> map_rel_sobj){
+		system.debug('>>>>>>>>>>>>>>>> rtNameQueryMap '+ mainObj);
 		//getting schema mainObj field
 		Map<String, List<SObject>> map_sobj_query = new Map<String, List<Sobject>>();
 		//if(map_obj_flds.containsKey(mainObj)){
-			system.debug('>>>>>>>>>>>>>>>> processQueryMap '+ mainObj);
+			system.debug('>>>>>>>>>>>>>>>> rtNameQueryMap '+ mainObj);
 
 			map_rel_sobj.put(mainObj, mainObj);
 			Map<String,Schema.SObjectField> map_schemafields = Schema.getGlobalDescribe().get(mainObj).getDescribe().fields.getMap();
@@ -169,12 +214,12 @@ public without sharing class PathFormMdtUtil {
 				String objApiName = map_rel_sobj.get(lstApiNameRelForm[0]);
 
 				if(mainObj == objApiName)continue;
-				system.debug('>>>>>>>>>>>>>>>>>> processQueryMap dentro del for map_rel_sobj ' + map_rel_sobj + '  relObjName ' + relObjName);
+				system.debug('>>>>>>>>>>>>>>>>>> rtNameQueryMap dentro del for map_rel_sobj ' + map_rel_sobj + '  relObjName ' + relObjName);
 				if(relObjName != null){
 					System.debug(objApiName);
 					objToQuery = map_schemafields.get(lstApiNameRelForm[0]).getDescribe().getRelationshipName();
 				
-					system.debug('>>>>>>>>>>>>>>>>>> processQueryMap relObjName '+  objToQuery+ ' ' +lstApiNameRelForm[0] + ' map_obj_flds.get(relObjName) ' + map_obj_flds.get(relObjName));
+					system.debug('>>>>>>>>>>>>>>>>>> rtNameQueryMap relObjName '+  objToQuery+ ' ' +lstApiNameRelForm[0] + ' map_obj_flds.get(relObjName) ' + map_obj_flds.get(relObjName));
 					String soql = 'SELECT ' + joinIdSetByComma(map_obj_flds.get(relObjName)) + ' FROM ' + objToQuery + ' WHERE Id = \'' + (String)map_sobj_query.get(mainObj).get(0).get(lstApiNameRelForm[0]) + '\' LIMIT 1';
 					System.debug(soql);
 					SObject relObj = Database.query(soql);
@@ -191,14 +236,14 @@ public without sharing class PathFormMdtUtil {
 
 
 				}else{
-					system.debug('>>>>>>>>>>>>>>> processQueryMap es null ');
+					system.debug('>>>>>>>>>>>>>>> rtNameQueryMap es null ');
 				}
 				
 			}
 		//}
 		system.debug('>>>>>>>>>> map_sobj_query '+ map_sobj_query);
 		return map_sobj_query;
-	}
+	}*/
 
 
 	public void fuseSobjInfoIntoConfig(Map<String, SObject> map_sobjects ,Map<String, List<Object>> map_form, Map<String, String> map_rel_sobj){
@@ -227,15 +272,16 @@ public without sharing class PathFormMdtUtil {
 				//Map<String,Schema.SObjectField> currentSchema = map_sobtype_fieldmap.get(objApiName);
 				system.debug('>>>>>>>>>>>>> fuseSobjInfoIntoConfig detras currentSobj ' + currentSobj + ' map_sobtype_fieldmap ' + map_sobtype_fieldmap);
 				system.debug('>>>>>>>>>> relObjName ' + relObjName);
+				if(!map_fieldconfig.containsKey('size'))map_fieldconfig.put('size', 6);
 				if(currentSobj == null){
 					system.debug('>>>>>>>>>>> fuseSobjInfoIntoConfig es null');
 				}else{
 					//System.debug('map_sobj_availabeflds.get(objApiName).contains((String)map_fieldconfig.get(apiNam))'+ map_sobj_availabeflds.containsKey(objApiName) );
 					if((map_fieldconfig.containsKey('standard') && Boolean.valueOf(map_fieldconfig.get('standard')) || map_sobtype_fieldmap.get(map_rel_sobj.get(objApiName)).containsKey((String)map_fieldconfig.get('apiName')))/*map_sobj_availabeflds.containsKey(objApiName) && map_sobj_availabeflds.get(objApiName).contains((String)map_fieldconfig.get('apiName'))*/){
 						//System.debug('map_sobj_availabeflds.get(objApiName).contains((String)map_fieldconfig.get(apiNam))'+ map_sobj_availabeflds.get(objApiName).contains((String)map_fieldconfig.get('apiName')) );
-
+						
 						Schema.SObjectField map_schemaAUX = map_sobtype_fieldmap.get(map_rel_sobj.get(objApiName)).get((String)map_fieldconfig.get('apiName'));
-						if(String.valueOf(map_schemaAUX.getDescribe().getType()) == 'PICKLIST'){
+						if(String.valueOf(map_schemaAUX.getDescribe().getType()) == 'PICKLIST' && !map_fieldconfig.containsKey('endpoint')){
 							if(!map_fieldconfig.containsKey('attributes')){
 								map_fieldconfig.put('attributes', new Map<String, Object> {'options'=> new List<Map <String, Object>>(), 'placeholder' => ''});
 							}
@@ -254,7 +300,10 @@ public without sharing class PathFormMdtUtil {
 						}
 					
 						map_fieldconfig.put('value', currentSobj.get((String)map_fieldconfig.get('apiName')));
-						map_fieldconfig.put('label', map_schemaAUX.getDescribe().getLabel());
+						if(!map_fieldconfig.containsKey('label'))map_fieldconfig.put('label', map_schemaAUX.getDescribe().getLabel());
+
+					}else if(map_fieldconfig.containsKey('section') && (Boolean)map_fieldconfig.get('section')){
+						map_fieldconfig.put('title', replaceKeysForValues((String)map_fieldconfig.get('title'), map_sobjects));
 					}
 
 					map_fieldconfig.put('sobjInfo', new Map<String, String>{'sobjtype' => map_rel_sobj.get(objApiName), 'sobjId' => (String)currentSobj.get('Id')});
@@ -265,14 +314,38 @@ public without sharing class PathFormMdtUtil {
 		}
 	}
 
-	private String joinIdSetByComma(Set<String> setStrings){
+	private String replaceKeysForValues(String text, Map<String, Sobject> mapSobj){
+		System.debug('replaceKeysForValues');
+		String calculatedStr = text;
+		for(String key : mapSobj.keySet()){
+			String finalKey= '$'+key;
+			if(calculatedStr.contains(finalKey)){
+				List<String> lstText = calculatedStr.split(' ');
+				for(String word : lstText){
+					if(word.contains('$')){
+						System.debug('replaceKeysForValues ' + word);
+						List<String> lstFields = word.split('\\.');
+						System.debug('replaceKeysForValues ' + lstFields);
+						System.debug('replaceKeysForValues ' + word);
+						System.debug('replaceKeysForValues ' + key + ' ' + lstFields[1]);
+						calculatedStr = calculatedStr.replace(word, ( mapSobj.get(key).get(lstFields[1]) != null ? (String) mapSobj.get(key).get(lstFields[1]) : '') );
+						System.debug('replaceKeysForValues ' + calculatedStr);
+
+					}
+				}
+			}
+		}
+		return calculatedStr;
+	}
+
+	/*private String joinIdSetByComma(Set<String> setStrings){
 		system.debug('>>>>>>>>>>>>>>>> joinIdSetByComma');
 		List<String> auxset = new List<String>();
 		if(!setStrings.contains('Id'))setStrings.add('Id');
 		auxset.addAll(setStrings);
 
 		return String.join(auxset, ',');
-	}
+	}*/
 	/**
 	 * Elements in the picklist must be ordered
 	 */
@@ -290,7 +363,7 @@ public without sharing class PathFormMdtUtil {
 		return map_ret;
 	}
 
-	private Set<String> getSetAvailableFlds(SObject sobj){
+	/*private Set<String> getSetAvailableFlds(SObject sobj){
 		// Serialize our Sobject into JSON
 		Set<String> fieldsPresent = new Set<String>();
 		if(sobj!=null){
@@ -303,7 +376,7 @@ public without sharing class PathFormMdtUtil {
 			System.debug('availableFlds '+  fieldsPresent);
 		}
 		return fieldsPresent;
-	}
+	}*/
 	private Set<String> delUnexpectedTokens(Set<String> setFields){
 		Set<String> set_formatted = new Set<String>();
 		for(String field : setFields){
